<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    KEITAI JISHO PROJECT
    Resource File: Strings (base)
    NOTE: Translations will not be commented

    @version    1.0 alpha 150313
    @author     George Shazkho
    @since       March 09, 2015
    -->

    <!-- Main strings -->

    <string name="app_name" translatable="false">Keitai Jisho</string>
    <string name="dummyText_short" translatable="false">%D%</string>
    <string name="dummyText_medium" translatable="false">%DUMMY%</string>
    <string name="dummyText_large" translatable="false">$THIS_IS_A_REALLY_LONG_DUMMY%</string>
    <string name="search_async_searching">Searching…</string>
    <string name="version" translatable="false">1.0 alpha 150316</string>


    <!-- Search Activity -->

    <string name="search_title" translatable="false">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_searchBox_hint">Search here</string>
    <string name="search_searchBox_title_text">Kanji, kana and romaji are allowed</string>
    <string name="search_config_title_text">Search in english</string>
    <string name="search_buttons_search">Search</string>
    <string name="search_error_mixed">Search field can not contain Romaji and (Kana or Kanji) at the same time</string>
    <string name="search_error_spaces">Search string cannot contain spaces.</string>
    <string name="search_error_english_kana">English search may only contain roman characters.</string>
    <string name="search_header_image_hint">Header</string>
    <string name="search_config_title_text_land">Search in english</string>
    <string name="search_general_dict">General dictionary</string>
    <string name="search_clear">CLEAR</string>


    <!-- Results Activity -->

    <string name="title_activity_results">Search results</string>
    <string name="results_element_kanjiHeader_text" translatable="false">KANJI</string>
    <string name="results_element_glossHeader_text">MEANINGS</string>
    <string name="results_menu_about">About</string>
    <string name="results_menu_reload">Force data reload</string>
    <string name="result_tts_error1">TTS ERROR: Language is not supported</string>
    <string name="result_tts_error2">TTS ERROR: Couldn\'t start TTS service</string>
    <string name="activity_results_hint_icon_description">Hint</string>
    <string name="activity_results_hint_text">TAP A KANJI FOR DETAILS</string>
    <string name="activity_results_hint_button" translatable="false">OK!</string>


    <!-- Kanji Details Activity -->

    <string name="title_activity_result_detail">Kanji details - </string>
    <string name="details_kanji_otherHeader_string">OTHER INFORMATION</string>
    <string name="details_kanji_readingOnText_string" translatable="false">ON</string>
    <string name="details_kanji_readingsKunText_string" translatable="false">KUN</string>
    <string name="details_kanji_readingsText_string">READINGS</string>
    <string name="details_kanji_meaningsHeader_string">MEANINGS</string>
    <string name="details_kanji_titleComplement_string">Details for </string>
    <string name="details_strokes">Strokes:</string>
    <string name="details_usage">Usage:</string>
    <string name="details_skip">SKIP:</string>
    <string name="details_turtle">Turtle:</string>
    <string name="details_4corner">4-Corner:</string>
    <string name="details_deroo">Deroo:</string>


    <!-- About Activity -->

    <string name="title_activity_about">About Keitai Jisho</string>
    <string name="about_title_text" translatable="false">KEITAI JISHO</string>
    <string name="about_details_versionRow_label">Version:</string>
    <string name="about_details_versionRow_value" translatable="false">0.7.2 (416)</string>
    <string name="about_details_dateRow_label">Build date:</string>
    <string name="about_details_dateRow_value" translatable="false">2015–03–12</string>
    <string name="about_details_authorRow_label">Author:</string>
    <string name="about_details_authorRow_value" translatable="false">George Shazkho</string>
    <string name="about_details_contactRow_label">Contact:</string>
    <string name="about_details_contactRow_value" translatable="false">shazkho@gmail.com</string>
    <string name="about_description_text">From japanese terms \'keitai\' (mobile) and \'jisho\' (dictionary). KEITAI JISHO is a project, driven by George Shazkho, which objective is to be a simple and useful tool for non-native japanese speakers. It has been built natively on Java (using Android Studio IDE and Android SDK tools), and it\'s based on some open source projects:</string>
    <string name="about_description_text_html"><![CDATA[
        <html>
            <head>
                <meta charset="utf-8"/>
                <style type="text/css">
                    body {
                      margin-left:      0;
                      margin-right:     0;
                      padding-left:     0;
                      padding-right:    0;
                    }
                    a:link, a:visited, a:hover, a:active {
                      text-decoration:  none;
                      color:            #8c1c1c;
                    }
                    li {
                      margin-bottom:    10px;
                    }
                </style>
            </head>
            <body style="text-align:justify">
                <strong>携帯 (keitai):</strong> Mobile (handheld)<br>
                <strong>辞書 (jisho):</strong> Dictionary<br><br>
                Keitai Jisho (mobile dictionary) is a free to use project, driven by George Shazkho, which objective is to be a simple and useful tool for non-native japanese speakers.<br>
                It has been built natively on Java (using Android Studio IDE and Android SDK tools), and it\'s based on some open source projects:
                <ul>
                    <li><a href="https://code.google.com/p/svg-android-2/">svg-android-2</a>: Open source library (Apache 2.0 liense). Used to display SVG images (kanji stroke order).</li>
                    <li><a href="http://www.edrdg.org/jmdict/edict.html">EDICT</a>: Free to use dictionary (Creative Commons v3.0). Used as the main dictionary on this app (term-based search).</li>
                    <li><a href="http://www.csse.monash.edu.au/~jwb/kanjidic.html">KANJIDICT</a>: Free to use dictionary (Creative Commons v3.0). Used as the kanji-specific dictionary (kanji-based search).</li>
                    <li><a href="http://kanjivg.tagaini.net/">KanjiVG</a>: Free to use collection (Creative Commons v3.0). Used as source for stroke order in kanji-based search.</li>
                    <li>WanaKanaJava: Java helper class. Partially implemented, helps translating inro Romaji. MIT licensed.</li>
                </ul>
            </body>
        </html>]]>
    </string>
    <string name="about_details_licenseRow_label">License</string>
    <string name="about_details_licenseRow_value">Apache License, Version 2.0</string>


    <!-- Whatsnew -->

    <string name="whatsnew_changelog"><![CDATA[
        <html>
            <head>
                <meta charset="utf-8"/>
                <style type="text/css">
                    li {
                       margin-left:    -10px;
                    }
                </style>
            </head>
            <body>
                <b>DEVELOPER\'S NOTE:</b> You may not notice it, but we changed A LOT since 0.6!. Better performance, 15\%% to 2\%% decreased error spawn on web requests, better performance, lighter, faster… and still FREE (now and for ever!).<br/>
                <br/>
                <b>v0.7.2 HOTFIX (03/12/2015):</b><br/>
                <ul>
                    <li>Kanji details bug on request solved.</li>
                </ul>
                <b>v0.7.1 CHANGES (03/10/2015):</b><br/>
                <ul>
                    <li>Corrected bug in romaji translation, hint spawn (result list)</li>
                    <li>Minimal correction due to version change.</li>
                </ul>
                <b>v0.7 CHANGES (03/09/2015):</b><br/>
                <ul>
                    <li>Application backend completely re-designed and re-written.</li>
                    <li>New "no results found" interface, less formal, more informative.</li>
                    <li>Lots of garbage removed from everywhere.</li>
                    <li>Web-service re-designed and re-written.</li>
                    <li>Application core improved, generalized and made extensible.</li>
                    <li>Changelog for first version use implemented as a measure to improve communication between me and you :).</li>
                    <li>Database optimization, greatly reducing idle and response time.</li>
                    <li>Removed almost every error on web query results.</li>
                    <li>Temporally disabled TTS (kana reading), waiting for next version to better fit the functionality.</li>
                </ul>
                <br/>
                <b>SECOND DEVELOPER\'S NOTE:</b> If you reached here is because you care. Thanks to you and to all the people who spontaneously have been installing the app, I hope to fulfill your expectations now and in every version in the future.<br/>
                <br/>
                Visit <a href="http://www.shazkho.cl/keitaijisho">THE OFFICIAL SITE</a> for more information about the project.
            </body>
        </html>]]>
    </string>
    <string name="whatsnew_changelog_title">Keitai Jisho is now 0.7.1</string>
    <string name="whatsnew_title">HEY! Look at this!</string>
    <string name="whatsnew_button">Go to app</string>


    <!-- No Result -->

    <string name="no_result_title">Oops!</string>
    <string name="no_result_subtitle">It seems that we failed at helping you be awesome! :(</string>
    <string name="no_result_options">Whyyy…?</string>
    <string name="no_result_option1">1. Jisho hates TYPOs.</string>
    <string name="no_result_option2">2. Jisho likes WORDS alone.</string>
    <string name="no_result_option3">3. Jisho likes INFINITIVE forms.</string>
    <string name="no_result_solutions">What can I do?</string>
    <string name="no_result_solution1">1. Try reload (circle arrow on top)</string>
    <string name="no_result_solution2">2. Try again (left-arrow on top)</string>
    <string name="no_result_solution3">3. Check your Internet connection.</string>
    <string name="no_result_solution4">4. Change query… or us :(</string>
    <string name="no_result_sign_name" translatable="false">Keitai Jisho</string>
    <string name="no_result_sign_department">Disappointed people service.</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bug_report">Bug report</string>

</resources>
